--- a/app/views/merchant_items/index.html.erb
+++ b/app/views/merchant_items/index.html.erb
@@ -1,28 +1,32 @@
-<h2><%= @merchant.name %></h2>
+<div id='header'>
+  <h2><%= @merchant.name %> Item Index</h2>
+</div>
 
+<div id='create_item'>
 <%= button_to 'Create a New Item', new_merchant_item_path(@merchant), method: :get %>
+</div>
 
-<h3>Enabled Items</h3>
-  <% @merchant.items.each do |item| %>
-    <% if item.status == 'Enabled' %>
-      <p><%= link_to item.name, merchant_item_path(@merchant.id, item.id) %></p>
-      <%= form_with model: [@merchant, item], url: merchant_item_status_path(@merchant, item), method: :patch, local: true do |f| %>
-        <%= f.hidden_field :status, value: 'Disabled' %>
-        <%= f.submit "Disable #{item.name}" %>
-      <% end %>
+<div id='enabled_items'>
+  <h3>Enabled Items</h3>
+  <% @merchant.items.enabled_items.each do |item| %>
+    <p><%= link_to item.name, merchant_item_path(@merchant.id, item.id) %></p>
+    <%= form_with model: [@merchant, item], url: merchant_item_status_path(@merchant, item), method: :patch, local: true do |f| %>
+      <%= f.hidden_field :status, value: 'disabled' %>
+      <%= f.submit "Disable #{item.name}" %>
     <% end %>
   <% end %>
+</div>
 
-<h3>Disabled Items</h3>
-  <% @merchant.items.each do |item| %>
-    <% if item.status == 'Disabled' %>
-      <p><%= link_to item.name, merchant_item_path(@merchant.id, item.id) %></p>
-      <%= form_with model: [@merchant, item], url: merchant_item_status_path(@merchant, item), method: :patch, local: true do |f| %>
-        <%= f.hidden_field :status, value: 'Enabled' %>
-        <%= f.submit "Enable #{item.name}" %>
-      <% end %>
+<div id='disabled_items'>
+  <h3>Disabled Items</h3>
+  <% @merchant.items.disabled_items.each do |item| %>
+    <p><%= link_to item.name, merchant_item_path(@merchant.id, item.id) %></p>
+    <%= form_with model: [@merchant, item], url: merchant_item_status_path(@merchant, item), method: :patch, local: true do |f| %>
+      <%= f.hidden_field :status, value: 'enabled' %>
+      <%= f.submit "Enable #{item.name}" %>
     <% end %>
   <% end %>
+</div>
 
 <h3>Top Items</h3>
   <% @merchant.top_five_items.each do |item| %>
