--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -5,10 +5,10 @@
 
 <h2> Top 5 Merchants by Revenue </h2>
 <% @merchants.top_5_merchants_revenue.each do |merchant| %>
-  <section id="top-5-merchants-<%= merchant.id %>">
-  <p> <%= link_to "#{merchant.name}", admin_merchant_path(merchant.id) %>, Revenue Generated: <%= number_to_currency(merchant.revenue) %> </p>
-  <p> Top selling date for <%= merchant.name %> was <%= merchant.merchant_best_day.strftime("%A, %B %d, %Y") %> </p>
-  </section>
+  <div id="top-5-merchants-<%= merchant.id %>">
+    <p> <%= link_to "#{merchant.name}", admin_merchant_path(merchant.id) %>, Revenue Generated: <%= number_to_currency((merchant.revenue / 100)) %> </p>
+    <p> Top selling date for <%= merchant.name %> was <%= merchant.merchant_best_day.strftime("%A, %B %d, %Y") %> </p>
+  </div>
 <% end %>
 
 <h2> Enabled Merchants </h2>
