Reafactor testing to use factorybot

--- a/app/views/merchant_invoices/show.html.erb
+++ b/app/views/merchant_invoices/show.html.erb
@@ -6,7 +6,7 @@
 <div id='invoice_info'>
   <p>Status: <%= @invoice.status %></p>
   <p>Created on: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
-  <p>Total Revenue: <%= number_to_currency(@invoice.invoice_items.total_revenue / 100) %>
+  <p>Total Revenue: <%= number_to_currency((@invoice.invoice_items.total_revenue / 100)) %>
 </div><br>
 
 <div id='customer'>
