--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -1,19 +1,21 @@
 <h1> Admin Invoice Show Page</h1>
 
-<h2>Invoice ID: <%= @invoice.id %></h2>
+<div id='header_attributes'>
+  <h2>Invoice ID: <%= @invoice.id %></h2>
 
-<h3>
-<%= form_with model: @admin_invoice, method: :patch do |f| %>
-  <%= f.label :status, "Status:" %>
-  <%= f.select :status, ['in_progress', 'completed', 'cancelled'], selected: @invoice.status %>
-  <%= f.submit "Update Invoice Status" %>
-<% end %>
-</h3>
+  < h3>
+    <%= form_with model: @admin_invoice, method: :patch do |f| %>
+      <%= f.label :status, "Status:" %>
+      <%= f.select :status, ['in_progress', 'completed', 'cancelled'], selected: @invoice.status %>
+      <%= f.submit "Update Invoice Status" %>
+      <% end %>
+  </h3>
 
-<p><b>Created At:</b> <%= @invoice.created_at.strftime('%A, %b %d, %Y') %></p>
-<p><b>Customer:</b> <%= @customer.first_name %> <%= @customer.last_name %></p>
-<p><b>Total Revenue:</b> $<%= @invoice.total_revenue/100 %></p>
-<br>
+  <p><b>Created At:</b> <%= @invoice.created_at.strftime('%A, %b %d, %Y') %></p>
+  <p><b>Customer:</b> <%= @customer.first_name %> <%= @customer.last_name %></p>
+  <p><b>Total Revenue:</b> $<%= @invoice.total_revenue/100 %></p>
+  <br>
+</div>
 
 <h3>Invoice Items:</h3>
 <% @invoice.invoice_items.each do |invoice_item| %>
