--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,7 +1,8 @@
 <div id='header'>
-  <h1><%= @merchant.name %></h1>
+  <h1><%= @merchant.name %> Dashboard</h1>
   <p><b><%= link_to "My Invoices", merchant_invoices_path(@merchant.id) %></b></p>
   <p><b><%= link_to "My Items", merchant_items_path(@merchant.id) %></b></p>
+  <p><b><%= link_to "My Bulk Discounts", merchant_bulk_discounts_path(@merchant.id) %></b></p>
 </div>
 
 <div id='ready_to_ship'>
