--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -11,10 +11,12 @@
   </div>
   <% end %>
 
-  <h2>Incomplete Invoices:</h2>
-  <div id="Incomplete_Invoices">
-    <% @invoices.incomplete_invoices_by_date.each do |invoice| %>
+<h2>Incomplete Invoices:</h2>
+<div id="Incomplete_Invoices">
+  <% @invoices.incomplete_invoices_by_date.each do |invoice| %>
+    <div id="invoice-<%= invoice.id %>">
       <p><%= link_to "##{invoice.id}", admin_invoice_path(invoice.id) %></p>
       <p>Created At: <%= invoice.created_at.strftime("%A, %B %d, %Y") %></p>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
+</div>
