--- a/app/views/merchant_bulk_discounts/index.html.erb
+++ b/app/views/merchant_bulk_discounts/index.html.erb
@@ -2,7 +2,15 @@
   <h1><%= @merchant.name %> Bulk Discounts Index</h1>
 </div>
 
+<div id='holidays'>
+  <h3>Upcoming Holidays in the United States</h3>
+  <% @holidays.each do |holiday| %>
+    <p><%= holiday[:name] %> - <%= holiday[:date].strftime("%A, %B %-d, %Y") %></p>
+  <% end %>
+</div>
+
 <div id='bulk_discounts'>
+  <h3>Merchant Discounts:</h3>
   <% @merchant.bulk_discounts.each do |discount| %>
     <div id="discount-<%= discount.id %>">
       <p><b>Bulk Discount <%= link_to "#{discount.id}", merchant_bulk_discount_path(@merchant.id, discount.id) %></b></p>
