Build test and then display and route path for destroy bulk discount

--- a/app/views/merchant_bulk_discounts/index.html.erb
+++ b/app/views/merchant_bulk_discounts/index.html.erb
@@ -20,6 +20,7 @@
       <p><b>Bulk Discount <%= link_to "#{discount.id}", merchant_bulk_discount_path(@merchant.id, discount.id) %></b></p>
       <p>Quantity Threshold: <%= discount.quant_threshold %></p>
       <p>Discount: <%= (discount.discount * 100) %>%</p>
+      <%= button_to 'Delete', merchant_bulk_discount_path(@merchant.id, discount.id), method: :delete%>
     </div>
   <% end %>
 </div>
