Build merchant index and testing

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,1 +1,10 @@
-<h1>Welcome!</h1>
+<br>
+<h4>Welcome!</h4>
+
+<p>This E-commerce backend website project was created by Lee Hopper at the Turning School of Software and Design.</p>
+
+<p>This project is an extension of the a Little Esty Shop group project. I added the functionality for merchants to create bulk discounts for their items. A “bulk discount” is a discount based on the quantity of items the customer is buying, for example “20% off orders of 10 or more items”.</p>
+
+<p><b>User Stories:</b> <a href="https://backend.turing.edu/module2/projects/bulk_discounts">(link)</a></p>
+
+<p><b>GitHub Repo:</b> <a href="https://github.com/leehopper/little-esty-shop">(link)</a></p>
