--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <h2>Little Etsy Shop</h2>
+  <br>
+
   <body>
     <% flash.each do |type, msg| %>
       <div>
