--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <h2>Little Etsy Shop</h2>
+  <h4><%= link_to 'Welcome', '/' %></h4>
+  <h4><%= link_to 'Merchants', merchants_path %></h4>
+  <h4><%= link_to 'Admin Dashboard', admin_path %></h4>
   <br>
 
   <body>
